samples/_failures_safe/1761289456_660af8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff9f50b7.c: In function ‘main’:
./samples/SAFE/__tmp_ff9f50b7.c:140:24: error: missing terminating " character
  140 |                 printf("%d->
      |                        ^~~~~
./samples/SAFE/__tmp_ff9f50b7.c:140:17: error: expected expression at end of input
  140 |                 printf("%d->
      |                 ^~~~~~
./samples/SAFE/__tmp_ff9f50b7.c:140:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ff9f50b7.c:140:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ff9f50b7.c:140:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ff9f50b7.c:140:17: error: expected declaration or statement at end of input
